- New sensor: 'target_soc' - Sensor 'charge_max_ampere' now also displays numerical charge current limits in Ampere (did not work in former versions) - Action 'set_charger_max_current' now also works for numerical charge current limits in Ampere (fixes #5) - PyCupra now offers the feature to ask the Cupra/Seat portal to send push notifications to PyCupra when the charging status or the climatisation status have changed or when requests like unlock vehicle or start charging have been fulfilled. The notifications trigger PyCupra to reread certain vehicle data from the API.

--- a/custom_components/pycupra/translations/de.json
+++ b/custom_components/pycupra/translations/de.json
@@ -28,6 +28,7 @@
           "convert": "Wähle Entfernungs-/Einheitsumwandlungen aus.",
           "scan_interval": "Abfragehäufigkeit (Sekunden).",
           "update_interval": "Abfragehäufigkeit (Sekunden).",
+          "use_push_notifications": "Push-Benachrichtigungen nutzen",
           "nightly_update_reduction": "Nächtliche Reduktion der Abfragehäufigkeit (zwischen 22:00 und 05:00).",
           "debug": "Vollständiges API Debug Logging (erfordert die Aktivierung von Debug Logging im configuration.yaml)"
         }
@@ -63,6 +64,7 @@
         "data": {
           "scan_interval": "Abfragehäufigkeit (Sekunden).",
           "update_interval": "Abfragehäufigkeit (Sekunden)",
+          "use_push_notifications": "Push-Benachrichtigungen nutzen",
           "nightly_update_reduction": "Nächtliche Reduktion der Abfragehäufigkeit (zwischen 22:00 und 05:00).",
           "spin": "S-PIN",
           "mutable": "Erlaube Interaktionen mit dem Auto (Aktionen). Deaktivieren um das Auto 'schreibgeschützt' zu machen.",
