- Bug fix in action set_climater() (fixes #7) - Bug fix in action send_destination() - New binary sensor area_alarm. (Is switched on, if a push notification for a vehicle area alarm is received; further information about the alarm in the attributes of the binary sensor) - For some entities (e.g. position, door_locked, range entities), a triggered selected update is now possible via automation (see proposed feature in issue 7) - If fulldebug is enabled, now also the payload for http requests is shown - Code modifications to notice when firebase connection got lost and to restart it

--- a/custom_components/pycupra/translations/de.json
+++ b/custom_components/pycupra/translations/de.json
@@ -134,15 +134,15 @@
     },
     "set_climater": {
       "name": "Klimatisierung setzen",
-      "description": "Starten/Stoppen der Klimatisierung mit optionalen Parametern.",
+      "description": "Starten/Stoppen der Klimatisierung mit optionalen Parametern oder Zieltemperatur ändern.",
       "fields": {
         "device_id": {
           "name": "Geräte-ID",
           "description": "Geräte-ID des Fahrzeugs"
         }, 
         "enabled": {
-          "name": "Aktivieren",
-          "description": "Starten oder Stoppen der Klimatisierung"
+          "name": "Aktivität",
+          "description": "Starten oder Stoppen der Klimatisierung oder Zieltemperatur ändern"
         },
         "temp": {
           "name": "Temperatur",
