--- a/custom_components/pycupra/translations/en.json
+++ b/custom_components/pycupra/translations/en.json
@@ -34,7 +34,7 @@
         }
       },
       "reauth_confirm": {
-        "description": "Re-authenticate with your My Cupra/My Seat account.\nMake sure to accept any new EULA in the My Cupra portal (https://cupraofficial.de) before proceeding.",
+        "description": "Re-authenticate with your My Cupra/My Seat account.\nMake sure to accept any new EULA in the Cupra/Seat portal before proceeding.",
         "data": {
           "brand": "Brand",
           "username": "Email",
